--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <img src="c:\Users\EG2035TU\Downloads\1722401344800.jpg"  class="profile-pic">
+            <img src="c:\Users\EG2035TU\Downloads\1722401344800.jpg" class="profile-pic" alt="Profile Picture">
             <h1>"Hello, I'm <span>Harsh Tyagi</span>"</h1>
             <p>"Passionate about technology and creativity, skilled in Python, Power BI, SQL, Excel, and UX/UI design."</p>
         </div>
@@ -36,13 +36,12 @@
             "A highly motivated and enthusiastic individual with a strong passion for technology and creativity, skilled in Python, Power BI, SQL, and UX/UI design."
         </p>
         
-        <a href="file:///C:/Users/EG2035TU/Downloads/HARSH%20TYAGI%20RESUME%20(1).pdf" class="btn">Download Resume</a>
+        <a href="file:///C:/Users/EG2035TU/Downloads/HARSH%20TYAGI%20RESUME%20(1).pdf" class="btn" download>Download Resume</a>
     </section>
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
         <h2>Projects</h2>
-        <br>
         <div class="project-grid">
             <div class="project">
                 <h3>Project 1</h3>
