--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Harsh Tyagi</title>
-    <link rel="stylesheet" href="style.css"> 
+    <title>Harsh Tyagi - UI/UX Designer Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
     <nav>
-        <div class="logo">
-            <h1 class="logo-title">Portfolio</h1>
-        </div>
+        <div class="logo">Harsh Tyagi</div>
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -23,20 +22,17 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <img src="c:\Users\EG2035TU\Downloads\1722401344800.jpg" class="profile-pic" alt="Profile Picture">
-            <h1>"Hello, I'm <span>Harsh Tyagi</span>"</h1>
-            <p>"Passionate about technology and creativity, skilled in Python, Power BI, SQL, Excel, and UX/UI design."</p>
+            <h1>Hi, I’m <span>Harsh Tyagi</span></h1>
+            <p>A UI/UX Designer passionate about creating immersive digital experiences.</p>
+            <a href="#projects" class="btn">View My Work</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>
-            "A highly motivated and enthusiastic individual with a strong passion for technology and creativity, skilled in Python, Power BI, SQL, and UX/UI design."
-        </p>
-        
-        <a href="file:///C:/Users/EG2035TU/Downloads/HARSH%20TYAGI%20RESUME%20(1).pdf" class="btn" download>Download Resume</a>
+        <p>I'm a UI/UX designer with a background in computer science, blending creativity with technical expertise. My focus is on user-centered design, and I aim to create intuitive and impactful digital experiences.</p>
+        <a href="resume.pdf" target="_blank" class="btn">Download Resume</a>
     </section>
 
     <!-- Projects Section -->
@@ -44,14 +40,20 @@
         <h2>Projects</h2>
         <div class="project-grid">
             <div class="project">
-                <h3>Project 1</h3>
-                <p>A web application to manage tasks efficiently.</p>
-                <a href="https://your-project-link.com" target="_blank">View Project</a>
+                <img src="project1.jpg" alt="Project 1">
+                <div class="project-info">
+                    <h3>Project One</h3>
+                    <p>Interactive web platform design for task management.</p>
+                    <a href="https://project-link.com" target="_blank">View Project</a>
+                </div>
             </div>
             <div class="project">
-                <h3>Project 2</h3>
-                <p>A blog website where users can post and share articles.</p>
-                <a href="https://your-project-link.com" target="_blank">View Project</a>
+                <img src="project2.jpg" alt="Project 2">
+                <div class="project-info">
+                    <h3>Project Two</h3>
+                    <p>Responsive e-commerce website design with user-friendly navigation.</p>
+                    <a href="https://project-link.com" target="_blank">View Project</a>
+                </div>
             </div>
             <!-- Add more projects as needed -->
         </div>
@@ -61,24 +63,20 @@
     <section id="skills" class="skills">
         <h2>Skills</h2>
         <div class="skills-grid">
-            <div class="skill">PYTHON</div>
+            <div class="skill">UI/UX Design</div>
+            <div class="skill">Figma</div>
+            <div class="skill">Adobe XD</div>
+            <div class="skill">Python</div>
+            <div class="skill">Power BI</div>
             <div class="skill">SQL</div>
-            <div class="skill">ADVANCE EXCEL</div>
-            <div class="skill">POWER BI</div>
-            <div class="skill">UI/UX</div>
-            <div class="skill">FIGMA</div>
         </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>If you would like to work with me, feel free to reach out!</p>
-        <div class="contact-info">
-            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></p>
-            <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">GitHub Profile</a></p>
-        </div>
+        <p>If you’re interested in collaborating, feel free to reach out!</p>
+        <a href="mailto:your.email@example.com" class="btn">Email Me</a>
     </section>
 
     <!-- Footer -->
